separated DB from scrapemanager, fixed sortduplicate test